# MalApiCpp

./: .gitignore  CMakeLists.txt  Packages.cmake  READMD.md  README.md  TODOS.txt  compile_commands.json  getDubs.txt  main.cpp
.cache/clangd/index/: JsonValueAdapter.hpp.D4E44C5FF7A55FD2.idx  Log.cpp.9E82066089C9937C.idx  Log.hpp.DBA39BAB21C1B4FC.idx  Response.hpp.BAFEBBAC093B94FD.idx  UrlRequest.hpp.984DCC747D7D6289.idx  async.h.DBC0E42513D3A579.idx  async.h.EE1A058F850F0024.idx  auth.cpp.D45DD3AD2D570E1D.idx  auth.hpp.8FD9808C6FCF277E.idx  base64.cc.F16B02CCAEE8DAAB.idx  base64.h.B2CC87738D50FBBC.idx  client.cpp.6B97833B1519D216.idx  client.hpp.8E438B11982C6AD7.idx  clientTypes.hpp.3DACF1BD02A87EF0.idx  common.h.564822C0AE635A79.idx  common.h.D299366426DB296F.idx  config.h.01AB8E85101347B5.idx  config.h.64E32C9922D8442A.idx  cookie.h.5C50CF124E8EA892.idx  cookie.h.FAD7F4C2A16FBDD3.idx  description.h.7AF70F2D6D48BDE0.idx  endpoint.h.2C5F19BD192AE1A3.idx  endpoint.h.F4CC0BA926C6AB45.idx  flags.h.6E1A5C31909F5C27.idx  flags.h.7301D066EAD2508E.idx  http.h.5589D6A18FB4FFD3.idx  http.h.C3563BF8C2391042.idx  http_defs.h.313AD88FE05E1519.idx  http_defs.h.BBBEDCFB0967B4D2.idx  http_header.h.3B91F82F2A007F3F.idx  http_header.h.B4F82E17461036BF.idx  http_headers.cc.43F434D92CF76D4B.idx  http_headers.h.B54EC1E7ADE6BAD3.idx  http_headers.h.B5D69EB5DB0D31EA.idx  iterator_adapter.h.102BC39991DB2AFE.idx  json.hpp.5381D3D26B07FAF6.idx  listener.cpp.4A06F85A3B2CBD36.idx  listener.h.27A02093EE8B4C08.idx  listener.h.4E539B4F320C1487.idx  listener.hpp.2304523D62B02846.idx  (+54 more)
GetDubs/: CMakeLists.txt
GetDubs/include/: client.hpp  utils.hpp
GetDubs/src/: client.cpp  main.cpp  utils.cpp
MalApiTest/: CMakeLists.txt
MalApiTest/include/: listener.hpp
MalApiTest/src/: auth.cpp  client.cpp  main.cpp
include/: Log.hpp  MacroForEach64.hpp  httplib.hpp
include/cpp-httplib/: httplib.hpp
include/malapi/: auth.hpp  client.hpp  clientTypes.hpp  jsonDefinitions.hpp  types.hpp
include/malapi/types/: animeList.hpp  client.hpp  declarations.hpp
libs/: libpistache-0.0.002-git20210409.so.0.0
malapi/: CMakeLists.txt
malapi/include/malapi/: auth.hpp  client.hpp  jsonDefinitions.hpp  listener.hpp
malapi/include/malapi/types/: auth.hpp  client.hpp
malapi/src/: auth.cpp  client.cpp  jsonDefinitions.cpp  listener.cpp
malapi/src/types/: auth.cpp  client.cpp
src/: auth.cpp  client.cpp  clientTypes.cpp  jsonDefinitions.cpp  listener.cpp
src/types/: animeList.cpp  client.cpp
tests/: CMakeLists.txt
tests/include/: auth.hpp  client.hpp  testClient.hpp
tests/src/: client.cpp  listener.cpp  main.cpp  testAuth.cpp  testClient.cpp  testListener.cpp  testMain.cpp  utils.cpp
