set(TESTS_EXECUTABLE_NAME MalApiTest)

file(GLOB_RECURSE TESTS_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(
  TESTS_INCLUDE_DIRS
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${MALAPI_INCLUDE_DIRS}
  ${LOG_INCLUDE_DIRS}
)
set(
  TESTS_LIBRARIES
  ${LOG_LIBRARIES}
  ${MALAPI_LIBRARIES}
)

message("TESTS_EXECUTABLE_NAME        : " ${TESTS_EXECUTABLE_NAME})
message("TESTS_INCLUDE_DIRS           : " ${TESTS_INCLUDE_DIRS})
message("TESTS_LIBRARIES              : " ${TESTS_LIBRARIES})
message("TESTS_SRC_FILES              : " ${TESTS_SRC_FILES})

add_executable(${TESTS_EXECUTABLE_NAME} ${TESTS_SRC_FILES})

target_include_directories(${TESTS_EXECUTABLE_NAME} PUBLIC ${TESTS_INCLUDE_DIRS})
target_link_libraries(${TESTS_EXECUTABLE_NAME} PUBLIC ${TESTS_LIBRARIES})
target_compile_options(${TESTS_EXECUTABLE_NAME} PUBLIC -pthread)

cotire(${TESTS_EXECUTABLE_NAME})
